<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile_icon"
        android:icon="@drawable/ic_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <!-- home button -->
    <item
        android:id="@+id/home_icon"
        android:icon="@drawable/home_icon"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom"/>

</menu>